--- a/index.html
+++ b/index.html
@@ -209,17 +209,17 @@
         </div>
     </section>
 
-    <section id="resources">
-        <div class="content">
-            <h2>Resources</h2>
-            <ul>
-                <li><strong>Books:</strong> "The Telescope" by Geoffrey Cornelius, "Galileo's Telescope" by Massimo Bucciantini.</li>
-                <li><strong>Articles:</strong> NASA’s Hubble Space Telescope page, ESA’s History of the Telescope.</li>
-                <li><strong>Videos:</strong> "The Universe Unveiled" documentary, PBS’s "Galileo's Discoveries."</li>
-            </ul>
-        </div>
-    </section>
-
+   <section id="resources">
+    <div class="content">
+        <h2>Resources / Other</h2>
+        <p>I really good at doing websites, and I choose this topic because im interested in space and its cool to thing about the history before hand.</p>
+        <ul>
+            <li><strong>Books:</strong> "The Telescope" by Geoffrey Cornelius, "Galileo's Telescope" by Massimo Bucciantini.</li>
+            <li><strong>Articles:</strong> NASA’s Hubble Space Telescope page, ESA’s History of the Telescope.</li>
+            <li><strong>Videos:</strong> "The Universe Unveiled" documentary, PBS’s "Galileo's Discoveries."</li>
+        </ul>
+    </div>
+</section>
     <footer>
         <p>&copy; 2024 Daniel Nava | All rights reserved</p>
     </footer>
